--- a/package.json
+++ b/package.json
@@ -2,25 +2,26 @@
   "name": "vitetemplate",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "build": "vite build",
+    "preview": "vite preview",
+    "link": "eslink . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "mitt": "^3.0.0",
     "vue": "^3.2.47",
-    "vue-router": "^4.2.2",
-    "vuex": "^4.0.2"
+    "vue-router": "^4.2.2"
   },
   "devDependencies": {
-    "@types/node": "^20.2.6",
+    "@rushstack/eslink-path": "^1.2.0",
     "@vitejs/plugin-vue": "^4.1.0",
     "sass": "^1.63.3",
     "sass-loader": "^13.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
-    "vue-tsc": "^1.4.2"
+    "eslint": "^8.34.0",
+    "eslint-plugin-vue": "^9.9.0"
   }
 }
