--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "vue-router": "^4.2.2"
   },
   "devDependencies": {
-    "@rushstack/eslink-path": "^1.2.0",
+    "@rushstack/eslint-patch": "^1.3.1",
     "@vitejs/plugin-vue": "^4.1.0",
+    "eslint": "^8.42.0",
+    "eslint-plugin-vue": "^9.9.0",
     "sass": "^1.63.3",
     "sass-loader": "^13.3.2",
     "typescript": "^5.0.2",
-    "vite": "^4.3.9",
-    "eslint": "^8.34.0",
-    "eslint-plugin-vue": "^9.9.0"
+    "vite": "^4.3.9"
   }
 }
