--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "link": "eslink . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.4.0",
+    "element-plus": "^2.3.6",
     "mitt": "^3.0.0",
     "vue": "^3.2.47",
     "vue-router": "^4.2.2"
@@ -17,11 +19,10 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.1",
     "@vitejs/plugin-vue": "^4.1.0",
-    "eslint": "^8.42.0",
-    "eslint-plugin-vue": "^9.9.0",
-    "sass": "^1.63.3",
-    "sass-loader": "^13.3.2",
-    "typescript": "^5.0.2",
+    "eslint": "^8.43.0",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.3",
+    "typescript": "^5.1.3",
     "vite": "^4.3.9"
   }
 }
