--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,10 +25,14 @@
     "baseUrl": "./",
     "paths": {
       "@/*": [
-        "src/*"
+        "./src/*",
       ]
     }
   },
+  "exclude": [
+    "node_modules",
+    "dist"
+  ],
   "include": [
     "src/**/*.ts",
     "src/**/*.d.ts",
