--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "link": "eslink . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "link": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.4.0",
     "element-plus": "^2.3.6",
+    "less": "^4.1.3",
     "mitt": "^3.0.0",
     "vue": "^3.2.47",
     "vue-router": "^4.2.2"
@@ -20,8 +21,8 @@
     "@rushstack/eslint-patch": "^1.3.1",
     "@vitejs/plugin-vue": "^4.1.0",
     "eslint": "^8.43.0",
-    "less": "^4.1.3",
-    "less-loader": "^11.1.3",
+    "eslint-plugin-vue": "^9.15.1",
+    "eslint-plugin-import": "^2.27.5",
     "typescript": "^5.1.3",
     "vite": "^4.3.9"
   }
