--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.4.0",
     "element-plus": "^2.3.6",
+    "js-base64": "^3.7.5",
     "less": "^4.1.3",
     "mitt": "^3.0.0",
     "vue": "^3.2.47",
@@ -21,8 +22,8 @@
     "@rushstack/eslint-patch": "^1.3.1",
     "@vitejs/plugin-vue": "^4.1.0",
     "eslint": "^8.43.0",
-    "eslint-plugin-vue": "^9.15.1",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-vue": "^9.15.1",
     "typescript": "^5.1.3",
     "vite": "^4.3.9"
   }
