--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "less": "^4.1.3",
     "mitt": "^3.0.0",
     "vue": "^3.2.47",
-    "vue-router": "^4.2.2"
+    "vue-router": "^4.2.2",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.1",
