--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mitt": "^3.0.0",
     "vue": "^3.2.47",
     "vue-router": "^4.2.2",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.1",
