--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.4.0",
+    "echarts": "^5.4.3",
     "element-plus": "^2.3.6",
+    "jquery": "^3.7.1",
     "js-base64": "^3.7.5",
     "less": "^4.1.3",
     "mitt": "^3.0.0",
